pkl file updates

--- a/ILP_test.ipynb
+++ b/ILP_test.ipynb
@@ -62,24 +62,24 @@
     "# Simulation time parameters\n",
     "initial_time = time(5,0)\n",
     "period_length = 5 # mins\n",
-    "total_operation_hours = 10 # hours\n",
+    "total_operation_hours = 24 # hours\n",
     "\n",
     "# nc, Minimum num of crew break\n",
-    "nc = 0\n",
+    "nc = 1\n",
     "\n",
     "# Dc, Crew break duration (fixed)\n",
     "Dc = 10 # mins\n",
     "\n",
     "# Tc, Maximum seperation time for crew breakings\n",
-    "Tc = 10*60 # mins\n",
+    "Tc = 24*60 # mins\n",
     "\n",
     "# rv+, charging rate\n",
-    "rv_plus = 2100*period_length/60/1100 # kW*h/kwh --> %  new modification (11July)\n",
+    "rv_plus = 2100*period_length/60/1100 # kW*h/kwh --> %  \n",
     "\n",
     "# rv, discharging rate for revalancing, based on max speed of the vessel\n",
     "\n",
     "# pc. Plugging/Unplugging time\n",
-    "pc = 2 # minh\n"
+    "pc = 2 # minh"
    ]
   },
   {
@@ -173,7 +173,7 @@
     {
      "data": {
       "text/plain": [
-       "120"
+       "288"
       ]
      },
      "execution_count": 5,
@@ -1303,51 +1303,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "taskF_results: 100%|██████████| 70/70 [07:19<00:00,  6.27s/it]\n",
+      "mu_results: 100%|██████████| 70/70 [00:00<00:00, 28350.84it/s]\n",
+      "xi_results: 100%|██████████| 70/70 [00:01<00:00, 50.74it/s]\n",
+      "phi_results: 100%|██████████| 70/70 [00:00<00:00, 104.04it/s]\n",
+      "E_results: 100%|██████████| 49/49 [00:07<00:00,  6.37it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "# # cal_taskF(j, t), taskF_results\n",
-    "# taskF_results = {}\n",
-    "# for j in tqdm(Jset, desc='taskF_results'):\n",
-    "#     for t in Tset:\n",
-    "#         taskF_results[(j, t)] = cal_taskF(j, t)\n",
+    "# cal_taskF(j, t), taskF_results\n",
+    "taskF_results = {}\n",
+    "for j in tqdm(Jset, desc='taskF_results'):\n",
+    "    for t in Tset:\n",
+    "        taskF_results[(j, t)] = cal_taskF(j, t)\n",
     "\n",
-    "# # cal_mu(j), mu_results\n",
-    "# mu_results = {}\n",
-    "# for j in tqdm(Jset, desc='mu_results'):\n",
-    "#     mu_results[j] = cal_mu(j)\n",
+    "# cal_mu(j), mu_results\n",
+    "mu_results = {}\n",
+    "for j in tqdm(Jset, desc='mu_results'):\n",
+    "    mu_results[j] = cal_mu(j)\n",
     "\n",
-    "# # cal_xi(j, j_prime), xi_results\n",
-    "# xi_results = {}\n",
-    "# for j in tqdm(Jset, desc='xi_results'):\n",
-    "#     for j_prime in Jset:\n",
-    "#         xi_results[(j, j_prime)] = cal_xi(j, j_prime)\n",
+    "# cal_xi(j, j_prime), xi_results\n",
+    "xi_results = {}\n",
+    "for j in tqdm(Jset, desc='xi_results'):\n",
+    "    for j_prime in Jset:\n",
+    "        xi_results[(j, j_prime)] = cal_xi(j, j_prime)\n",
     "\n",
-    "# # cal_phi(j, t) phi_results\n",
-    "# phi_results = {}\n",
-    "# for j in tqdm(Jset, desc='phi_results'):\n",
-    "#     for t in Tset:\n",
-    "#         phi_results[(j, t)] = cal_phi(j, t)\n",
+    "# cal_phi(j, t) phi_results\n",
+    "phi_results = {}\n",
+    "for j in tqdm(Jset, desc='phi_results'):\n",
+    "    for t in Tset:\n",
+    "        phi_results[(j, t)] = cal_phi(j, t)\n",
     "\n",
-    "# # cal_E(w, t), E_results\n",
-    "# E_results = {}\n",
-    "# for w in tqdm(Wset, desc='E_results'):\n",
-    "#     for t in Tset:\n",
-    "#         # print(w,t)\n",
-    "#         E_results[(w, t)] = cal_E(w, t)\n",
+    "# cal_E(w, t), E_results\n",
+    "E_results = {}\n",
+    "for w in tqdm(Wset, desc='E_results'):\n",
+    "    for t in Tset:\n",
+    "        # print(w,t)\n",
+    "        E_results[(w, t)] = cal_E(w, t)\n",
     "\n",
-    "# # Save\n",
-    "# with open('pkl_files/taskF_results.pkl', 'wb') as f:\n",
-    "#     pickle.dump(taskF_results, f)\n",
-    "# with open('pkl_files/mu_results.pkl', 'wb') as f:\n",
-    "#     pickle.dump(mu_results, f)\n",
-    "# with open('pkl_files/xi_jj_results.pkl', 'wb') as f:\n",
-    "#     pickle.dump(xi_results, f)\n",
-    "# with open('pkl_files/phi_results.pkl', 'wb') as f:\n",
-    "#     pickle.dump(phi_results, f)\n",
-    "# with open('pkl_files/E_results.pkl', 'wb') as f:\n",
-    "#     pickle.dump(E_results, f)"
+    "# Save\n",
+    "with open('pkl_files/taskF_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(taskF_results, f)\n",
+    "with open('pkl_files/mu_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(mu_results, f)\n",
+    "with open('pkl_files/xi_jj_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(xi_results, f)\n",
+    "with open('pkl_files/phi_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(phi_results, f)\n",
+    "with open('pkl_files/E_results.pkl', 'wb') as f:\n",
+    "    pickle.dump(E_results, f)"
    ]
   },
   {
