--- a/ILP_test.ipynb
+++ b/ILP_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        "288"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[18, 19, 20, 21, 22, 23, 24]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cal_D(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: [19, 20, 21, 22, 23, 24, 25],\n",
+       " 2: [24, 25, 26, 27, 28, 29, 30],\n",
+       " 3: [44, 45, 46, 47, 48, 49, 50],\n",
+       " 4: [48, 49, 50, 51, 52, 53, 54],\n",
+       " 5: [19, 20, 21, 22, 23, 24, 25],\n",
+       " 6: [9, 10, 11, 12, 13, 14, 15],\n",
+       " 7: [12, 13, 14, 15, 16, 17, 18],\n",
+       " 8: [13, 14, 15, 16, 17, 18, 19],\n",
+       " 9: [9, 10, 11, 12, 13, 14, 15],\n",
+       " 10: [11, 12, 13, 14, 15, 16, 17],\n",
+       " 11: [14, 15, 16, 17, 18, 19, 20],\n",
+       " 12: [15, 16, 17, 18, 19, 20, 21],\n",
+       " 13: [20, 21, 22, 23, 24, 25, 26],\n",
+       " 14: [13, 14, 15, 16, 17, 18, 19],\n",
+       " 15: [14, 15, 16, 17, 18, 19, 20],\n",
+       " 16: [11, 12, 13, 14, 15, 16, 17],\n",
+       " 17: [17, 18, 19, 20, 21, 22, 23],\n",
+       " 18: [15, 16, 17, 18, 19, 20, 21],\n",
+       " 19: [18, 19, 20, 21, 22, 23, 24]}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,18 +1271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2025-06-26\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create model\n",
     "model = gp.Model(\"Ferry test\")"
@@ -1232,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,6 +1338,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gurobi.Var *Awaiting Model Update*>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[(18,21)]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1303,63 +1372,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "taskF_results: 100%|██████████| 70/70 [07:19<00:00,  6.27s/it]\n",
-      "mu_results: 100%|██████████| 70/70 [00:00<00:00, 28350.84it/s]\n",
-      "xi_results: 100%|██████████| 70/70 [00:01<00:00, 50.74it/s]\n",
-      "phi_results: 100%|██████████| 70/70 [00:00<00:00, 104.04it/s]\n",
-      "E_results: 100%|██████████| 49/49 [00:07<00:00,  6.37it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# cal_taskF(j, t), taskF_results\n",
-    "taskF_results = {}\n",
-    "for j in tqdm(Jset, desc='taskF_results'):\n",
-    "    for t in Tset:\n",
-    "        taskF_results[(j, t)] = cal_taskF(j, t)\n",
+    "# # cal_taskF(j, t), taskF_results\n",
+    "# taskF_results = {}\n",
+    "# for j in tqdm(Jset, desc='taskF_results'):\n",
+    "#     for t in Tset:\n",
+    "#         taskF_results[(j, t)] = cal_taskF(j, t)\n",
     "\n",
-    "# cal_mu(j), mu_results\n",
-    "mu_results = {}\n",
-    "for j in tqdm(Jset, desc='mu_results'):\n",
-    "    mu_results[j] = cal_mu(j)\n",
+    "# # cal_mu(j), mu_results\n",
+    "# mu_results = {}\n",
+    "# for j in tqdm(Jset, desc='mu_results'):\n",
+    "#     mu_results[j] = cal_mu(j)\n",
     "\n",
-    "# cal_xi(j, j_prime), xi_results\n",
-    "xi_results = {}\n",
-    "for j in tqdm(Jset, desc='xi_results'):\n",
-    "    for j_prime in Jset:\n",
-    "        xi_results[(j, j_prime)] = cal_xi(j, j_prime)\n",
+    "# # cal_xi(j, j_prime), xi_results\n",
+    "# xi_results = {}\n",
+    "# for j in tqdm(Jset, desc='xi_results'):\n",
+    "#     for j_prime in Jset:\n",
+    "#         xi_results[(j, j_prime)] = cal_xi(j, j_prime)\n",
     "\n",
-    "# cal_phi(j, t) phi_results\n",
-    "phi_results = {}\n",
-    "for j in tqdm(Jset, desc='phi_results'):\n",
-    "    for t in Tset:\n",
-    "        phi_results[(j, t)] = cal_phi(j, t)\n",
+    "# # cal_phi(j, t) phi_results\n",
+    "# phi_results = {}\n",
+    "# for j in tqdm(Jset, desc='phi_results'):\n",
+    "#     for t in Tset:\n",
+    "#         phi_results[(j, t)] = cal_phi(j, t)\n",
     "\n",
-    "# cal_E(w, t), E_results\n",
-    "E_results = {}\n",
-    "for w in tqdm(Wset, desc='E_results'):\n",
-    "    for t in Tset:\n",
-    "        # print(w,t)\n",
-    "        E_results[(w, t)] = cal_E(w, t)\n",
+    "# # cal_E(w, t), E_results\n",
+    "# E_results = {}\n",
+    "# for w in tqdm(Wset, desc='E_results'):\n",
+    "#     for t in Tset:\n",
+    "#         # print(w,t)\n",
+    "#         E_results[(w, t)] = cal_E(w, t)\n",
     "\n",
-    "# Save\n",
-    "with open('pkl_files/taskF_results.pkl', 'wb') as f:\n",
-    "    pickle.dump(taskF_results, f)\n",
-    "with open('pkl_files/mu_results.pkl', 'wb') as f:\n",
-    "    pickle.dump(mu_results, f)\n",
-    "with open('pkl_files/xi_jj_results.pkl', 'wb') as f:\n",
-    "    pickle.dump(xi_results, f)\n",
-    "with open('pkl_files/phi_results.pkl', 'wb') as f:\n",
-    "    pickle.dump(phi_results, f)\n",
-    "with open('pkl_files/E_results.pkl', 'wb') as f:\n",
-    "    pickle.dump(E_results, f)"
+    "# # Save\n",
+    "# with open('pkl_files/taskF_results.pkl', 'wb') as f:\n",
+    "#     pickle.dump(taskF_results, f)\n",
+    "# with open('pkl_files/mu_results.pkl', 'wb') as f:\n",
+    "#     pickle.dump(mu_results, f)\n",
+    "# with open('pkl_files/xi_jj_results.pkl', 'wb') as f:\n",
+    "#     pickle.dump(xi_results, f)\n",
+    "# with open('pkl_files/phi_results.pkl', 'wb') as f:\n",
+    "#     pickle.dump(phi_results, f)\n",
+    "# with open('pkl_files/E_results.pkl', 'wb') as f:\n",
+    "#     pickle.dump(E_results, f)"
    ]
   },
   {
@@ -1376,19 +1433,19 @@
     }
    ],
    "source": [
-    "# read \n",
-    "with open('pkl_files/taskF_results.pkl', 'rb') as f:\n",
-    "    taskF_results = pickle.load(f)\n",
-    "with open('pkl_files/mu_results.pkl', 'rb') as f:\n",
-    "    mu_results = pickle.load(f)\n",
-    "with open('pkl_files/xi_jj_results.pkl', 'rb') as f:# read\n",
-    "    xi_results = pickle.load(f)\n",
-    "with open('pkl_files/E_results.pkl', 'rb') as f:\n",
-    "    E_results = pickle.load(f)\n",
-    "with open('pkl_files/phi_results.pkl', 'rb') as f: # read\n",
-    "    phi_results = pickle.load(f)\n",
+    "# # read \n",
+    "# with open('pkl_files/taskF_results.pkl', 'rb') as f:\n",
+    "#     taskF_results = pickle.load(f)\n",
+    "# with open('pkl_files/mu_results.pkl', 'rb') as f:\n",
+    "#     mu_results = pickle.load(f)\n",
+    "# with open('pkl_files/xi_jj_results.pkl', 'rb') as f:# read\n",
+    "#     xi_results = pickle.load(f)\n",
+    "# with open('pkl_files/E_results.pkl', 'rb') as f:\n",
+    "#     E_results = pickle.load(f)\n",
+    "# with open('pkl_files/phi_results.pkl', 'rb') as f: # read\n",
+    "#     phi_results = pickle.load(f)\n",
     "\n",
-    "print('All results matrixes ready!')"
+    "# print('All results matrixes ready!')"
    ]
   },
   {
